{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 42,
  "lineage": "4ecabd0b-e605-d7d4-288f-1eb94fa3c5b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017dc5c73e9c03c99",
            "arn": "arn:aws:ec2:us-east-1:010526250076:instance/i-02053675048fbcaec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02053675048fbcaec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mon_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0461b69db97827597",
            "private_dns": "ip-10-0-20-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.244",
            "public_ip": "54.90.142.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8aa1a3a9b9be6ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a104b0c15d967cee",
            "tags": {
              "Name": "mon_client_server_1"
            },
            "tags_all": {
              "Name": "mon_client_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02043b8530f00a48d"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.node_exporter_sg",
            "aws_subnet.prometheus_subnet_1",
            "aws_vpc.prometheus_vpc",
            "data.aws_ami.ubuntu_22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017dc5c73e9c03c99",
            "arn": "arn:aws:ec2:us-east-1:010526250076:instance/i-0e726d023c278b114",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e726d023c278b114",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mon_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab6157ae3d149dc7",
            "private_dns": "ip-10-0-20-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.219",
            "public_ip": "18.232.129.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f05d8853a8064554",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a104b0c15d967cee",
            "tags": {
              "Name": "mon_prometheus_server"
            },
            "tags_all": {
              "Name": "mon_prometheus_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081e907fdce57a3f6"
            ]
          },
          "dependencies": [
            "aws_key_pair.server_key_pair",
            "aws_security_group.prometheus_sg",
            "aws_subnet.prometheus_subnet_1",
            "aws_vpc.prometheus_vpc",
            "data.aws_ami.ubuntu_22"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prometheus_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:internet-gateway/igw-09d41571bf48f2237",
            "id": "igw-09d41571bf48f2237",
            "owner_id": "010526250076",
            "tags": {
              "Name": "mon_igw"
            },
            "tags_all": {
              "Name": "mon_igw"
            },
            "vpc_id": "vpc-0c3dd31d4ce785b65"
          },
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prometheus_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:route-table/rtb-0fa2bf586e3ee35f7",
            "id": "rtb-0fa2bf586e3ee35f7",
            "owner_id": "010526250076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d41571bf48f2237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mon_rtb"
            },
            "tags_all": {
              "Name": "mon_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd31d4ce785b65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prometheus_igw",
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-one-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046452d054a9cbecb",
            "route_table_id": "rtb-0fa2bf586e3ee35f7",
            "subnet_id": "subnet-0a104b0c15d967cee"
          },
          "dependencies": [
            "aws_internet_gateway.prometheus_igw",
            "aws_route_table.prometheus_route_table",
            "aws_subnet.prometheus_subnet_1",
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_exporter_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:security-group/sg-02043b8530f00a48d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02043b8530f00a48d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "mon_node_sec_grp",
            "name_prefix": "",
            "owner_id": "010526250076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mon_sg"
            },
            "tags_all": {
              "Name": "mon_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd31d4ce785b65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prometheus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:security-group/sg-081e907fdce57a3f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081e907fdce57a3f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "mon_prom_sec_grp",
            "name_prefix": "",
            "owner_id": "010526250076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mon_sg"
            },
            "tags_all": {
              "Name": "mon_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd31d4ce785b65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prometheus_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:subnet/subnet-0a104b0c15d967cee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a104b0c15d967cee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526250076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon_subnet_1"
            },
            "tags_all": {
              "Name": "mon_subnet_1"
            },
            "vpc_id": "vpc-0c3dd31d4ce785b65"
          },
          "dependencies": [
            "aws_vpc.prometheus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prometheus_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:vpc/vpc-0c3dd31d4ce785b65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056d92aea85ddd983",
            "default_route_table_id": "rtb-0d04767dd5058fa5a",
            "default_security_group_id": "sg-051cffbbcd9f54150",
            "dhcp_options_id": "dopt-0cfcaef1f2a31881c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3dd31d4ce785b65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d04767dd5058fa5a",
            "owner_id": "010526250076",
            "tags": {
              "Name": "mon_vpc"
            },
            "tags_all": {
              "Name": "mon_vpc"
            }
          }
        }
      ]
    }
  ]
}